--- a/colorGame.css
+++ b/colorGame.css
@@ -87,3 +87,22 @@ button:hover {
 	color: white;
 	background-color: steelblue;
 }
+
+.overlay {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.7);
+      justify-content: center;
+      align-items: center;
+    }
+
+    /* Styles for the popup */
+    .popup {
+      background: #fff;
+      padding: 20px;
+      text-align: center;
+    }
