--- a/colorGame.css
+++ b/colorGame.css
@@ -19,6 +19,18 @@ body {
 	-webkit-transition: background 0.6s;
 	-moz-transition: background 0.6s;
 
+.xsquare {
+	width: 45%;
+	background: purple;
+	padding-bottom: 30%;
+	margin: 2.5%;
+	border-radius: 15%;
+	box-sizing: content-box;
+	width: 30%;
+	transition: background 0.6s;
+	-webkit-transition: background 0.6s;
+	-moz-transition: background 0.6s;
+
 
 }
 
