--- a/colorGame.css
+++ b/colorGame.css
@@ -21,7 +21,7 @@ body {
 
 .xsquare {
 	width: 45%;
-	background: purple;
+	background: rgb(25,200,25);
 	padding-bottom: 30%;
 	margin: 2.5%;
 	border-radius: 15%;
