--- a/colorGame.css
+++ b/colorGame.css
@@ -105,3 +105,12 @@ button:hover {
       padding: 20px;
       text-align: center;
     }
+
+.example {
+    width: 30%;
+    background: rgb(10, 200, 10);
+    padding-bottom: 30%;
+    margin: 2.5%;
+    border-radius: 15%;
+    box-sizing: content-box;
+   }
