--- a/colorGame.css
+++ b/colorGame.css
@@ -107,6 +107,7 @@ button:hover {
     }
 
 .example {
+    text-align: center;	
     width: 30%;
     background: rgb(10, 200, 10);
     padding-bottom: 30%;
